--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=com.movieFlix
 spring.datasource.url = jdbc:mysql://localhost/myspringbootdb
 spring.datasource.username = root
-spring.datasource.password = Aditya@123
+spring.datasource.password = ''
 spring.jpa.hibernate.ddl-auto=update
 
